# vsleep

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  deny.toml  release.toml  spinners.json  spinners.json.backup
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: changelog.yml  cicd.yml
scripts/: pre-release.sh
src/: lib.rs  main.rs  spinner.rs  spinners.json
src/core/: error.rs  mod.rs  spinner.rs  time.rs
