[package]
name = "vsleep"
version = "0.1.0"
description = "A verbose, visual replacement for the Unix `sleep` command."
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["sleep", "spinner", "term", "terminal", "wait"]
authors = ["Chad Eldridge <chad.eldridge@gmail.com>"]
homepage = "https://github.com/chadeldridge/vsleep"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chadeldridge/vsleep"
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "vsleep"
path = "src/bin/vsleep/main.rs"
required-features = ["serde"]
test = false
doc = true

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.150", optional = true }
thiserror = "2"
